@@ -10,6 +10,7 @@ Revision history for Perl extension RPi::WiringPi.
         - deleted RPi::WiringPi::LCD, and turned it into a standalone dist,
           RPi::LCD
         - we now require RPi::LCD v2.3601
+        - added t/60-lcd.t for LCD testing (requires setting env vars manually)
 
 2.3611  2017-03-26
         - added fritzing and breadboard layout for the ADC/DAC test
